--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -182,52 +182,6 @@ jobs:
             }
           }
 
-      - name: "3.1 Install NSIS (for installer creation)"
-        if: ${{ inputs.create_installer == true || github.event_name == 'pull_request' }}
-        shell: pwsh
-        run: |
-          $ErrorActionPreference = 'Continue'
-          function Install-NSIS {
-            $maxTries = 3
-            for ($i = 1; $i -le $maxTries; $i++) {
-              Write-Host "Attempt $i: Installing NSIS via Chocolatey..."
-              try {
-                choco install nsis -y --no-progress
-                $nsisPath = "C:\\Program Files (x86)\\NSIS\\makensis.exe"
-                if (Test-Path $nsisPath) {
-                  Write-Host "NSIS installed successfully at: $nsisPath"
-                  "C:\\Program Files (x86)\\NSIS" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-                  return $true
-                }
-              } catch {
-                Write-Warning "Chocolatey NSIS install failed: $_"
-              }
-              Start-Sleep -Seconds 10
-            }
-            return $false
-          }
-          $success = Install-NSIS
-          if (-not $success) {
-            Write-Warning "Chocolatey NSIS install failed after retries. Attempting direct download..."
-            $nsisUrl = "https://prdownloads.sourceforge.net/nsis/nsis-3.10-setup.exe"
-            $nsisExe = Join-Path $env:RUNNER_TEMP "nsis-setup.exe"
-            try {
-              Invoke-WebRequest -Uri $nsisUrl -OutFile $nsisExe -UseBasicParsing
-              Start-Process -FilePath $nsisExe -ArgumentList "/S" -Wait
-              $nsisPath = "C:\\Program Files (x86)\\NSIS\\makensis.exe"
-              if (Test-Path $nsisPath) {
-                Write-Host "NSIS installed via direct download at: $nsisPath"
-                "C:\\Program Files (x86)\\NSIS" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-              } else {
-                Write-Error "NSIS install failed after all attempts."
-                exit 1
-              }
-            } catch {
-              Write-Error "Direct NSIS download and install failed: $_"
-              exit 1
-            }
-          }
-
       - name: "4. Prepare Ultralight SDK (Windows)"
         id: prep_sdk
         shell: pwsh
@@ -309,68 +263,32 @@ jobs:
           }
 
       - name: "6.2 Package (CPack)"
+        if: ${{ inputs.create_installer == true }}
         shell: pwsh
         run: |
           Write-Host "Packaging with CPack (Release config)"
           pushd build
-
-          # Create CPack ZIP package with proper naming
-          Write-Host "Creating CPack ZIP package..."
+          # Always produce a ZIP package for portability
           cpack -C Release -G ZIP
 
-          # Rename CPack ZIP to final name
+          # Produce NSIS installer only if makensis is available
+          if (Get-Command makensis -ErrorAction SilentlyContinue) {
+            cpack -C Release -G NSIS
+          } else {
+            Write-Warning "makensis not found in PATH; skipping NSIS installer generation."
+          }
+          popd
+          Write-Host "CPack outputs:"
+          Get-ChildItem -Path build -Recurse -Include *.exe,*.msi,*.zip | Select-Object -Property FullName,Length | Format-Table -AutoSize
+
+      - name: "6.3 Rename Windows installer"
+        run: |
           $version = "$env:WEBBROWSER_VERSION"
           $cpackZip = Get-ChildItem -Path . -Filter "*.zip" -File | Select-Object -First 1
           if ($cpackZip) {
             $finalZipName = "Ultralight-WebBrowser-$version-Windows-x64.zip"
             Write-Host "Renaming CPack ZIP: $($cpackZip.Name) -> $finalZipName"
             Move-Item -Force $cpackZip.FullName $finalZipName
-          }
-
-          # Check if NSIS is available and create_installer is true or on pull request
-          $createInstaller = "$env:CREATE_INSTALLER"
-          if ($env:GITHUB_EVENT_NAME -eq 'pull_request' -or $createInstaller -eq 'true') {
-            $nsisDir = Join-Path ${env:ProgramFiles(x86)} 'NSIS'
-            $nsisPath = Join-Path $nsisDir 'makensis.exe'
-            if (Test-Path $nsisPath) {
-              Write-Host "NSIS found at: $nsisPath"
-              Write-Host "Creating NSIS installer..."
-              try {
-                cpack -C Release -G NSIS
-                Write-Host "NSIS installer created successfully"
-
-                # Find NSIS installer (.exe) anywhere under build (CPack may place it under _CPack_Packages)
-                $exe = Get-ChildItem -Path . -Recurse -Filter *.exe -File -ErrorAction SilentlyContinue |
-                       Where-Object { $_.Name -notlike '*CompilerIdCXX*' -and $_.Name -like 'Ultralight-WebBrowser*' } |
-                       Select-Object -First 1
-                if (-not $exe) {
-                  # Fallback: pick first exe that isn't compiler helper
-                  $exe = Get-ChildItem -Path . -Recurse -Filter *.exe -File -ErrorAction SilentlyContinue |
-                         Where-Object { $_.Name -notlike '*CompilerIdCXX*' } | Select-Object -First 1
-                }
-                if ($exe) {
-                  $finalInstallerName = "Ultralight-WebBrowser-$version-Windows-x64.exe"
-                  $target = Join-Path (Get-Location) $finalInstallerName
-                  Write-Host "Found NSIS installer at: $($exe.FullName); moving to: $target"
-                  Move-Item -Force $exe.FullName $target
-                } else {
-                  Write-Warning "No installer .exe found under build after running CPack NSIS"
-                }
-              } catch {
-                Write-Warning "NSIS installer creation failed: $_"
-                Write-Warning "Continuing without installer..."
-              }
-            } else {
-              Write-Warning "NSIS not found at: $nsisPath"
-              Write-Warning "Skipping NSIS installer generation."
-            }
-          } else {
-            Write-Host "CREATE_INSTALLER not set to true, skipping NSIS installer."
-          }
-
-          popd
-          Write-Host "Final CPack outputs:"
-          Get-ChildItem -Path build -Include "Ultralight-WebBrowser-*" -File | Select-Object -Property Name,Length | Format-Table -AutoSize
 
       - name: "6.8 Run tests (ctest)"
         run: ctest --test-dir build -C Release --output-on-failure
@@ -396,20 +314,48 @@ jobs:
           Write-Host "Listing resources:"; if (Test-Path (Join-Path $src 'assets/resources')) { Get-ChildItem -Force (Join-Path $src 'assets/resources') | Format-List -Property Mode,Length,Name } else { Write-Host 'assets/resources not found' }
 
       - name: "7. Upload Final Packages"
-        uses: actions/upload-artifact@v4
-        with:
-          name: Ultralight-WebBrowser-${{ env.WEBBROWSER_VERSION }}-Windows-x64
-          path: |
-            build/Ultralight-WebBrowser-*-Windows-x64.zip
-            build/Ultralight-WebBrowser-*-Windows-x64.exe
-            build/**/Ultralight-WebBrowser-*-Windows-x64.exe
-          if-no-files-found: warn
+        # For multi-config, Visual Studio places outputs in 'build/Release'
+        # We use PowerShell's Compress-Archive
+        shell: pwsh
+        run: |
+          # Detect the actual output folder and zip it (handles different generators/layouts)
+          $candidates = @(
+            'build\Release',
+            'build\bin\Release',
+            'build\Ultralight-WebBrowser\Release',
+            'build\samples\Ultralight-WebBrowser\Release'
+          )
+          $src = $null
+          foreach ($p in $candidates) {
+            if (Test-Path $p) { $src = $p; break }
+          }
+          if (-not $src) {
+            throw "No expected output folder found. Checked: $($candidates -join ', ')"
+          }
+          Write-Host "Archiving from: $src"
+          $version = "$env:WEBBROWSER_VERSION"
+          $outName = "Ultralight-WebBrowser-$version-Windows-Portable.zip"
+          Compress-Archive -Path (Join-Path $src '*') -DestinationPath $outName -Force
 
-      - name: "7.1 Upload Intermediate Packages (Development Only)"
-        if: ${{ env.DEVELOPMENT_BUILD == 'true' }}
-        continue-on-error: true
+      - name: "8. Upload Artifact"
         uses: actions/upload-artifact@v4
         with:
-          name: Ultralight-WebBrowser-${{ env.WEBBROWSER_VERSION }}-Windows-x64-Intermediate
-          path: build/_CPack_Packages/
-          if-no-files-found: warn
+          name: ultralight-windows-build
+          path: Ultralight-WebBrowser-*-Windows-Portable.zip
+
+      - name: "8.1 Upload Installer"
+        if: ${{ inputs.create_installer == true }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: ultralight-windows-installer
+          path: |
+            build\Ultralight-WebBrowser-*-Windows-Installer.exe
+            build\*.msi
+
+      - name: "8.2 Upload CPack ZIP"
+        if: ${{ inputs.create_installer == true }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: ultralight-windows-cpack-zip
+          path: |
+            build\*.zip
